# brdf_analysis

./: README.md  dl.sh
PCA/: CMakeLists.txt  make_cov_mats.sh  pca.m
PCA/src/: main.cpp  string_utils.cpp  string_utils.h
brdf_data/: .gitignore
